kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oyd-pia2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oyd-pia2
  template:
    metadata:
      labels:
        app: oyd-pia2
    spec:
      containers:
      - name: oyd-pia2
        image: oydeu/oyd-pia2:latest
        ports:
        - containerPort: 3000
