kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oyd-pia2-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dv.data-container.net
    secretName: letsencrypt-oyd-pia2
  rules:
  - host: dv.data-container.net
    http:
      paths:
      - path: /
        backend:
          serviceName: oyd-pia2-service
          servicePort: 80
